cmake_minimum_required(VERSION 3.22)
project(pbuf)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(PkgConfig REQUIRED)
pkg_check_modules(PBUF REQUIRED protobuf)

find_package(Protobuf REQUIRED)
include_directories(${Protobuf_INCLUDE_DIRS})
include_directories(${CMAKE_CURRENT_BINARY_DIR})
protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS src/addressbook.proto)
# protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS EXPORT_MACRO DLL_EXPORT src/addressbook.proto)
# protobuf_generate_cpp(PROTO_SRCS PROTO_HDRS DESCRIPTORS PROTO_DESCS src/addressbook.proto)
# protobuf_generate_python(PROTO_PY foo.proto)
message("PROTO_SRCS ${PROTO_SRCS}")
message("PROTO_HDRS ${PROTO_HDRS}")
# message("DESCRIPTORS ${DESCRIPTORS}")
# message("PROTO_DESCS ${PROTO_DESCS}")
message("Protobuf_LIBRARIES ${Protobuf_LIBRARIES}")
message("PBUF_LIBRARIES ${PBUF_LIBRARIES}")

add_executable(sample src/main.cpp ${PROTO_SRCS} ${PROTO_HDRS})
# target_link_libraries(sample ${Protobuf_LIBRARIES})
target_link_libraries(sample ${PBUF_LDFLAGS})
